frontend/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body,
#root {
  overflow-x: hidden;
}

@supports (padding: env(safe-area-inset-bottom)) {
  .pb-safe {
    padding-bottom: env(safe-area-inset-bottom);
  }
  .pt-safe {
    padding-top: env(safe-area-inset-top);
  }
  .pl-safe {
    padding-left: env(safe-area-inset-left);
  }
  .pr-safe {
    padding-right: env(safe-area-inset-right);
  }
}

.str-chat {
  height: 100%;
}

.str-video__container {
  height: 100%;
}

.str-video__call {
  height: 100%;
}

.str-video__call-panel {
  height: 100%;
}

.str-video__theme {
  height: 100%;
  display: flex;
  flex-direction: column;
}

.str-chat__channel {
  display: flex;
  align-items: center;
  justify-content: center;
  background: linear-gradient(to bottom, #c9e8c9, #b7e7bb);
  height: 100%;
}

.str-chat__container {
  max-width: 1200px;
  width: 100%;
  height: 80% !important;
  margin: 0 auto !important;
  border-radius: 8px;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
  overflow: hidden;
}

.str-chat__list {
  @apply bg-base-100;
  padding: 12px;
}

.str-chat__list-notifications {
  display: none;
}

.str-chat__message-input {
  @apply border-t border-base-300;
}

@media (max-width: 768px) {
  .str-chat__container {
    height: 100% !important;
    margin: 0 !important;
    border-radius: 0 !important;
    max-width: 100% !important;
    box-shadow: none !important;
  }
}

